env file modified

--- a/.env
+++ b/.env
@@ -3,12 +3,12 @@ APP_DEBUG=true
 APP_KEY=base64:EEH01ZIKNcW1XIrffbXDbGRV5htDFrKDEyPWeXbG+s4=
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_CONNECTION=Psql
+DB_HOST=ec2-23-21-235-126.compute-1.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=d9h69b9ekfd2le
+DB_USERNAME=dhqtdxhgldeopa
+DB_PASSWORD=vTLXXpb6XuqLHM8SNFTcEWDK_J
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
